--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 body {
   max-width: 800px;
   margin: 0 auto;
+  background-color: antiquewhite;
 }
-
+div {
+  text-align: right;
+}
 .sender-column {
   text-align: right;
+  float: right;
+  margin-bottom: 20px;
 }
 
 h1 {
